rem overflow from container to fix bkg ghosting

--- a/css/main.css
+++ b/css/main.css
@@ -140,7 +140,7 @@ li {
 }
 
 .container {
-    overflow: hidden;
+    /* overflow: hidden; */
     min-width: 0;
     min-height: 0;
 }
